# krizzy_ops_launch

./: .cursor-rules  .dockerignore  .env.example  .gitignore  .ruff.toml  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  Procfile  README.md  airtable_utils.py  app_entry.py  config.py  config_env_aliases.py  database.py  discord_utils.py  govcon_subtrap_engine.py  healthcheck.py  job_queue.py  kpi.py  krizzy_bots.py  launcher.py  llm_router.py  logging_config.py  main (3).py  main.py  ops_core_launch.py  ops_health_service.py  process_guard.py  pyproject.toml  pytest.ini  railway.json  rei_dispo_engine.py  render.yaml  requirements.txt  scheduler.py  test_airtable_utils.py  test_backoff_logic.py  test_discord_utils.py  test_engines.py  (+7 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  krizzy_scheduled.yml  krizzy_tick.yml
app_v2/: README.md  __init__.py  config.py  database.py  feeds.py  loop_orchestrator.py  main_v2.py  requirements.txt  routes_feeds.py  scheduler.py  thread_supervisor.py
app_v2/agent/: operator.py  v2_llm_worker.py
app_v2/engines/: input_engine.py  underwriting_engine.py
app_v2/llm_control/: __init__.py  command_bus.py  dev_agent.py  normalizers.py  outbound_writer.py  schema_map.py  scorers.py
app_v2/models/: __init__.py  buyer.py  deal.py  job.py  ledger.py  ops.py  pending_deal.py  system_state.py
app_v2/utils/: airtable_client.py  airtable_safe.py  airtable_schema.py  discord_client.py  gmail_client.py  logger.py  scoring_utils.py
engines/: __init__.py  deal_closer_engine.py  govcon_engine.py  govcon_subtrap_engine.py  govcon_subtrap_engine_updated.py  ingest_engine.py  outbound_engine.py  rei_dispo_engine.py  rei_dispo_engine_updated.py  rei_engine.py  schema_sync_engine.py  watchdog_engine.py
krizzy_ops/: .env  .env.example  Procfile  README.md  __init__.py  healthcheck.py  main.py
krizzy_ops/engines/: govcon_subtrap.py  rei_dispo.py  watchdog.py
krizzy_ops/utils/: airtable_utils.py  discord_utils.py  llm_control.py  proxy_utils.py
n8n_workflows/: GOVCON_SUBTRAP_ENGINE.json  REI_DISPO_ENGINE.json
n8n_workflows/scripts/: launch_tests.sh
n8n_workflows/scripts/scripts/: trigger_workflows.sh
scripts/: dump_airtable_schema.py
src/: __init__.py  agents  airtable_utils.py.  app.py  govcon_subtrap_engine.py  ops_health_service.py  rei_dispo_engine.py  scheduler.py
src/bus/: command_bus.py
src/common/: __init__.py  airtable_client.py  airtable_utils.py  comms.py  cracks_tracker.py  discord.py  discord_notify.py  govcon_subtrap_engine.py  http_utils.py  kpi_logger.py  ops_health_service.py  rei_dispo_engine.py  twilio_client.py
src/engines/: govcon_engine.py  matcher.py  rei_engine.py  scorer.py
src/ops/: __init__.py  engine_guard.py  ops_notify.py  preflight.py
src/tools/: deploy.py  fix_crack.py  github_client.py  repo_diff.py  repo_write.py  schema_sync.py  tests_runner.py  validator.py
src/utils/: init.py  sam_utils.py
tests/: __init__.py  test_airtable_utils.py  test_backoff.py  test_discord_utils.py  test_govcon_engine.py  test_govcon_filters.py  test_kpi.py  test_main.py  test_rei_engine.py  test_twilio_utils.py  test_watchdog.py
tools/: smoke.py
utils/: __init__.py  airtable_meta.py  airtable_safe_upsert.py  airtable_utils.py  brain.py  codex.py  data_extraction.py  db.py  db_probe.py  discord_utils.py  heartbeat.py  kpi.py  llm.py  metrics.py  models.py  outbox.py  router.py  safe.py  twilio_utils.py  validate_env.py  watchdog.py
web/: .env.example  Dockerfile  package-lock.json  package.json  requirements.txt  server.js
web/ops/: airtable_utils.js  discord_utils.js  govcon_subtrap.js  logger.js  rei_dispo.js  twilio_utils.js  worker.js
web/worker/: Dockerfile
